style: prevent scrollbar display in article-skeleton (#118)

--- a/css/styles-skeleton.css
+++ b/css/styles-skeleton.css
@@ -6,6 +6,18 @@
   --paragraph-separation: 14px;
 }
 
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
+}
+
 * {
   margin: 0;
   padding: 0;
